--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                     <p class="description">Effortlessly monitor your water levels with this engaging DIY project! Utilizing an ultrasonic sensor for precise distance measurement, an Arduino Uno intelligently interprets the data. LEDs provide instant visual feedback on the water level status. A built-in buzzer adds an extra layer of alerting for critical lows.</p>
                 </div>
                 <div class="project-image">
-                    <img src="Screenshot 2025-04-28 071335.png" alt="Water Level Monitoring System">
+                    <img src="WhatApp Image 2025-04-26 at 21.20.56.jpeg" alt="Water Level Monitoring System">
                 </div>
             </div>
 
@@ -242,7 +242,7 @@
         </svg>
     </div>
     <div class="container">
-        <p>&copy; 2025 My Skills Tracker</p>
+        <p>&copy; 2025 SkillForge </p>
     </div>
 </footer>
 
