--- a/index.html
+++ b/index.html
@@ -135,20 +135,24 @@
 
 <body>
 
-<header>
-    <div class="container">
-        <h1>SkillForge</h1>
-        <nav>
-            <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="#skills">Skills</a></li>
-                <li><a href="#projects">Projects</a></li>
-                <li><a href="#certificates">Certificates</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
+<header class="p-4 bg-gray-100">
+  <div class="flex items-center justify-between mb-4">
+    <img src="Screenshot 2025-04-28 195544.png" alt="R Shriya Logo"
+         style="width: 1cm; height: 1cm;" class="mr-3">
+    <h1 class="text-3xl font-bold font-[The_Seasons] text-gray-800">SkillForge</h1>
+  </div>
+
+  <nav>
+    <ul class="flex space-x-4">
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#projects">Projects</a></li>
+      <li><a href="#certificates">Certificates</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
 </header>
+
 
 <div class="wave-top-right">
   <svg viewBox="0 0 1440 100" preserveAspectRatio="none">
@@ -242,7 +246,7 @@
         </svg>
     </div>
     <div class="container">
-        <p>&copy; 2025 SkillForge </p>
+        <p>&copy; 2025 My Skills Tracker</p>
     </div>
 </footer>
 
