--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <div class="project-item water-level-project">
                 <div class="project-info">
                     <h3>Water Level Monitoring System</h3>
-                    <p class="description">Effortlessly monitor your water levels with this engaging DIY project! Utilizing an ultrasonic sensor for precise distance measurement, an Arduino Uno intelligently interprets the data. LEDs provide instant visual feedback on the water level status. A built-in buzzer adds an extra layer of alerting for critical lows.</p>
+                    <p class="description">My firdt ever project! Effortlessly monitor your water levels with this engaging DIY project! Utilizing an ultrasonic sensor for precise distance measurement, an Arduino Uno intelligently interprets the data. LEDs provide instant visual feedback on the water level status. A built-in buzzer adds an extra layer of alerting for critical lows.</p>
                 </div>
                 <div class="project-image">
                     <img src="Screenshot 2025-04-28 071335.png" alt="Water Level Monitoring System">
@@ -215,7 +215,7 @@
             </div>
 
             <div class="project-item">
-                <h3>Project Title 2</h3>
+                <h3>obstacle avoiding car</h3>
                 <p class="duration">Start Date - End Date</p>
                 <p class="description">Brief description of the project and your contributions.</p>
             </div>
